--- a/render.yaml
+++ b/render.yaml
@@ -2,20 +2,20 @@ services:
   - type: web
     name: ollama-llama3
     env: docker
-    repo: https://github.com/Boomikaads/Render-Ollama.git  # replace
+    repo: https://github.com/Boomikaads/Render-Ollama.git  # replace with your repo
     branch: main
     plan: starter               # Starter or higher required for persistent disk
     dockerfilePath: ./Dockerfile
-    # important: mount persistent disk at Ollama home
     disk:
       name: ollama-data
       mountPath: /root/.ollama
-      sizeGB: 50               # adjust based on model size (example)
+      sizeGB: 50
     envVars:
       - key: OLLAMA_MODEL
-        value: llama3
+        value: llama3:8b
       - key: OLLAMA_MOUNT_PATH
         value: /root/.ollama
       - key: PORT
-        value: "11434"        # help Render pick the right container port
-    healthCheckPath: /api/generate
+        value: "11434"
+    healthCheckPath: /
+
